Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,21 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to keyword (<ipython-input-6-da492d2f3f82>, line 2)",
+     "evalue": "can't assign to literal (<ipython-input-7-a2f00f6cd7ce>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-da492d2f3f82>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    None = countries[-3]# 'Italy'\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to keyword\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-a2f00f6cd7ce>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    'None' = countries[-3]# 'Italy'\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
      ]
     }
    ],
    "source": [
     "italy = 'None'\n",
-    "None = countries[-3]# 'Italy'"
+    "'None' = countries[-3]# 'Italy'"
    ]
   },
   {
