--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = countries [1:None\n",
     "kindof_neighbors"
    ]
   },
