--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries. # add code here"
    ]
   },
   {
