Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries # add code here"
+    "countries('New Mexico') # add code here"
    ]
   },
   {
