Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,11 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Thailand') # add code here"
+    "countries.append('Thailand')"
    ]
   },
   {
