--- a/index.ipynb
+++ b/index.ipynb
@@ -394,11 +394,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set() None"
+    "unique_countries = set(countries)"
    ]
   },
   {
