--- a/index.ipynb
+++ b/index.ipynb
@@ -441,13 +441,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_of_repeats = None\n",
     "num_of_repeats # 3\n",
-    "Le"
+    "len(countries)\n",
+    "le"
    ]
   },
   {
