--- a/index.ipynb
+++ b/index.ipynb
@@ -441,16 +441,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "11"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
     "num_of_repeats = None\n",
     "num_of_repeats # 3\n",
     "len(countries)\n",
-    "le"
+    "len(unique_countries)"
    ]
   },
   {
